build: Modify pom (#18)
* build: Modify pom

* build: Modify pom

* build: Modify pom